src/test/test-models/bad/err-close-function-args.stan
functions {
  real foo(real x {
    return 1.0;
  }
}
model {
}
